--- a/zipper_app.service
+++ b/zipper_app.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 User=aerotract
 WorkingDirectory=/home/aerotract/software/zipper-app
-ExecStart=/home/aerotract/software/zipper-app/run.sh
+ExecStart=/usr/bin/python3 /home/aerotract/software/zipper-app/app.py
 Restart=always
 
 [Install]
